tests/errors/init_state/borrow_precondition/out_borrow_of_partial.err.expected
error: at 9:5: [INIT-BorrowStateMismatch] In function 'f', block 'entry': cannot create &out of 'p': place must be uninitialized at borrow, but is partially initialized
   |
 9 |     r = &out p;
   |     ^^^^^^^^^^
